--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   custom_switch: ^0.0.1
   flutter_switch: ^0.3.2
   audio_video_progress_bar: ^0.11.0
+  audioplayers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -65,13 +66,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.jpg
-    
-    - assets/images/download.jpeg
-    - assets/images/The_Weeknd_-_After_Hours.png
-    - assets/images/4455a314edfff1a63c30f03d9d135c64.1000x1000x1.jpg
-    - assets/images/Cs47zArVYAAg5dS.jpg
-    - assets/images/500x500.jpg
+    - assets/
+     
+    - assets/images/
+    - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
