--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   custom_switch: ^0.0.1
   flutter_switch: ^0.3.2
   audio_video_progress_bar: ^0.11.0
-  audioplayers: ^1.0.1
+  assets_audio_player: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +67,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-     
     - assets/images/
     - assets/audio/
 
