--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,17 @@ dependencies:
   flutter_switch: ^0.3.2
   audio_video_progress_bar: ^0.11.0
   assets_audio_player: ^3.0.5
+  hive: ^2.2.1
+  shared_preferences: ^2.0.15
+  hive_flutter: ^1.1.0
   on_audio_query: ^2.6.1
-  audioplayers: ^1.1.1
-  just_audio: ^0.9.30
-  just_audio_background: ^0.0.1-beta.8
-  rxdart: ^0.27.3
+
+
+  marquee: ^2.2.1
+ 
+  switcher_button: ^0.0.4
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +63,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: 
+  build_runner: 
+  flutter_launcher_icons: ^0.10.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
