--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,5 +67,8 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10"
+   
+  
+    
 }
